tests/ui/mismatched_types/for-loop-has-unit-body.stderr
error[E0308]: mismatched types
  --> $DIR/for-loop-has-unit-body.rs:3:9
   |
LL |         x
   |         ^ expected `()`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
