tests/ui/mismatched_types/for-loop-has-unit-body.rs
fn main() {
    for x in 0..3 {
        x //~ ERROR mismatched types
    }
}
